--- a/styles/src/_rightBottomBanner.scss
+++ b/styles/src/_rightBottomBanner.scss
@@ -8,6 +8,7 @@
     background-position: top center;
     background-size: cover;
     position: fixed;
+    z-index: 2;
     bottom: 60px;
     right: 34px;
     opacity: 0;
@@ -35,6 +36,11 @@
 
     @media (max-width: 500px) {
         background-position: right 30% center;
+    }
+
+    @media (max-height: 409px) {
+        bottom: auto;
+        top: 10px;
     }
 
     .close {
