--- a/styles/src/_rightBottomBanner.scss
+++ b/styles/src/_rightBottomBanner.scss
@@ -32,6 +32,7 @@
         width: 100%;
         border-radius: 0px;
         background-position: right center;
+        min-width: 360px;
     }
 
     @media (max-width: 500px) {
