--- a/styles/src/_rightBottomBanner.scss
+++ b/styles/src/_rightBottomBanner.scss
@@ -130,6 +130,7 @@
             font-weight: 500;
             letter-spacing: 0.08px;
             transform: translateY(1px);
+            cursor: pointer;
         }
     }
 }
